style.css
:root {
  --size: 300px;
  --arm-width: 15px;
  --main-colour: #ffffffbb;
  --bg-colour: #333;
  --primary-gradient-colour: #ff3d77; /* ff0066 */
  --secondary-gradient-colour: #ffc400;
  --total-steps: 60;
  --duration-seconds: 60s;
  --duration-minutes: 3600s;
  --duration-hours: 43200s;
  --delay-seconds: 0;
  --delay-minutes: 0;
  --delay-hours: 0;
}

body {
  box-sizing: border-box;
  margin: 20px;
  background-color: #000;
}

.arm {
  width: var(--arm-width);
  position: absolute;
  left: calc(var(--size)/2 - var(--arm-width)/2);
  background-color: var(--main-colour);
  transform-origin: calc(100% - var(--arm-width)/2) 100%;
  box-shadow: 2px 2px 15px 5px #00000033;
  opacity: 0;
  mix-blend-mode: screen;
}

.animate {
  animation-name: move;
  animation-iteration-count: infinite;
  animation-direction: normal;
  animation-fill-mode: forwards; 
}

.arm.seconds {
  height: calc(var(--size) / 2); /* 150px */
  top: 0; /* 0px */
  animation-duration: var(--duration-seconds);
  animation-delay: var(--delay-seconds);
  animation-timing-function: steps(var(--total-steps), end);
  background-image: linear-gradient(var(--main-colour) 0%, var(--primary-gradient-colour) 90%);
}

.arm.minutes {
  height: calc(var(--size) / 3); /* 100px */
  top: calc(var(--size) / 6); /* 50px */
  animation-duration: var(--duration-minutes);
  animation-delay: var(--delay-minutes);
  animation-timing-function: steps(var(--total-steps), end);
  background-image: linear-gradient(var(--main-colour) 20%, var(--primary-gradient-colour) 80%);
}

.arm.hours {
  height: calc(var(--size) / 4); /* 75px */
  top: calc(var(--size) / 4); /* 75px */
  animation-duration: var(--duration-hours);
  animation-delay: var(--delay-hours);
  animation-timing-function: linear;
  background-image: linear-gradient(var(--main-colour) 10%, var(--primary-gradient-colour) 80%);
}

.clock-centre {
  opacity: 1;
  height: calc(var(--arm-width)*2);
  width: calc(var(--arm-width)*2);
  top: calc(var(--size)/2 - var(--arm-width));
  left: calc(var(--size)/2 - var(--arm-width));
  position: absolute;
  border-radius: 50%;
  background-color: #fff;
}

arm.rounded-end {
  border-top-right-radius: calc(var(--arm-width)/2);
  border-top-left-radius: calc(var(--arm-width)/2);
}

.container {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  height: 100vh;
}

.outer-circle {
  min-width: var(--size);
  min-height: var(--size);
  position: relative;
  background-image: radial-gradient(var(--primary-gradient-colour) 10%, var(--secondary-gradient-colour) 90%);
  border: 20px solid var(--bg-colour);
  border-radius: 50%;
}

svg.segments {
  width: var(--size);
  height: var(--size);
  position: absolute;
  top: 0;
  left: 0;
  mix-blend-mode: screen;
}

svg.segments > circle {
  --gap: var(--arm-width);
  --pi: 3.14159;
  --segment: calc((2 * var(--pi) * var(--size)/2)/12); /* see 3 in notes.md */
  stroke: var(--main-colour);
  fill: none; 
  stroke-opacity: 1; 
  stroke-width: calc(var(--arm-width));
  stroke-dasharray: calc(var(--segment) - var(--gap)) var(--gap); 
  stroke-dashoffset: calc(var(--gap)/2 * -1);
  stroke-linecap: butt;
}

.header {
  text-align: center;
  color: #999;
  opacity: 0.6;
  font-family: 'Courier New', Courier, monospace;
  font-size: 1.7rem;
  font-weight: bold;
  margin: 0 0 40px 0;
  text-shadow: 0 2px 5px #000;
}

@keyframes move {
  to { 
    transform: rotate(360deg); 
  }
}

